Aula Best Minds Apex/Aula Best Minds APEX/force-app/main/default/objects/Sessions__c/fields/Room_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Room_Capacity__c</fullName>
    <label>Room Capacity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>