Aula Best Minds Apex/Aula Best Minds APEX/force-app/main/default/objects/Sessions__c/fields/Speaker_Name__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>